--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -1,8 +1,5 @@
-body {
-	box-sizing: border-box;
-}
-#container {
-	margin: 0px auto;
+.container {
+	margin: 0 auto;
 	width: 80%;
 	max-width: 1200px;
 }
@@ -23,4 +20,10 @@ body {
 }
 .col.third {
 	width: 33.33%;
+}
+.col.fourth {
+	width: 25%;
+}
+.col.sixth {
+	width:  16.67%;
 }
