--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -1,10 +1,3 @@
-html {
-	box-sizing: border-box;
-}
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-
 .container {
 	margin: 0 auto;
 	width: 80%;
@@ -21,25 +14,31 @@ html {
 .col {
 	float: left;
 	padding: 10px;
-	border: 1px solid black;
 }
 .col.half {
 	width: 50%;
-	background-color: red;
 }
 .col.third {
 	width: 33.33%;
-	background-color: orange;
 }
 .col.fourth {
-	background-color: yellow;
 	width: 25%;
 }
 .col.sixth {
-	background-color: green;
 	width:  16.66%;
 }
 .col.eighth {
-	background-color: blue;
 	width: 12.5%;
+}
+.col.twothird {
+	width: 66%;
+}
+.col.threeeighth {
+	width: 37.5%;
+}
+.offset-half {
+	margin-left: 50%;
+}
+.offset-fourth {
+	margin-left: 25%;
 }
