--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -15,12 +15,12 @@ body {
 .navbar img {
 	height: 90%;
 	width: 3em;
-	padding: .25em;
 }
 .navbar ul {
 	list-style-type: none;
 	text-align: center;
 	float: right;
+	margin: 1em;
 }
 .navbar ul li{
 	display: inline-block;
@@ -37,7 +37,6 @@ body {
 }
 .sidebar {
 	height: 750px;
-	width: 215px;
 	border: 1px solid black;
 	background-color: white;
 	padding: 20px;
@@ -77,7 +76,6 @@ body {
 	line-height: 1.5em;
 }
 footer {
-	height: 50px;
 	width: 100%;
 	position:fixed;
 	bottom:0px;
@@ -86,7 +84,6 @@ footer {
 }
 footer p {
 	font-size: 9px;
-	width: 215px;
 	text-align: center;
 }
 footer ul {
@@ -99,6 +96,7 @@ footer ul {
 }
 footer ul li {
 	display: inline;
+	margin: 1em;
 }
 footer ul li a{
 	color: #fff;
